--- a/_source/index.html
+++ b/_source/index.html
@@ -26,6 +26,7 @@
         padding-right: 40px;
         padding-left: 40px;
     }
+
     table {
         border-spacing: 2px;
         border-collapse: separate;
@@ -40,6 +41,9 @@
     }
     tr.odd td {
         background: #efefef;
+    }
+    h3 {
+        font-size: 36px;
     }
     </style>
     <script type="text/javascript" src="https://api.tiles.mapbox.com/mapbox.js/v2.1.5/mapbox.js"></script>
