--- a/_source/index.html
+++ b/_source/index.html
@@ -45,9 +45,20 @@
     h3 {
         font-size: 36px;
     }
+    @media screen and (max-width: 600px) {
+        body {
+            padding-right: 0px;
+            padding-left: 0px;
+        }
+    }
     </style>
     <script type="text/javascript" src="https://api.tiles.mapbox.com/mapbox.js/v2.1.5/mapbox.js"></script>
     <link type="text/css" rel="stylesheet" href="https://api.tiles.mapbox.com/mapbox.js/v2.1.5/mapbox.css" media="all" />
+
+    <link type="text/css" media="screen" rel="stylesheet" href="responsive-tables.css" />
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script type="text/javascript" src="responsive-tables.js"></script>
+
 </head>
 
 <body>
@@ -96,26 +107,31 @@
                     + '<dt>January 10-17</dt>'
                     + '<dd><b>Buried: 12</b></dd>'
                 + '</dl>'
-            + '</div>').openPopup();
+            + '</div>');//.openPopup();
 
     </script>
 
     <div class="itinerary">
+        {% assign events = site.data.a-frightful-number-plague | group_by:"date_year" %}
+        {% for year in events %}
         <table border="0" cellpadding="0" cellspacing="0">
             <tr>
-                <th width="15%">Date</th>
-                <th width="15%">Parish</th>
+                <th><h3>{{ year.name }}</h3></th>
+            </tr>
+        </table>
+        <table border="0" cellpadding="0" cellspacing="0" class="responsive">
+            <tr>
+                <th width="12%">Date</th>
+                <th width="12%">Parish</th>
                 <!-- <th width="5%">Year</th> -->
-                <th width="8%">Buried Parish</th>
-                <th width="7%">Buried Total</th>
+                <th>Buried Plague</th>
+                <th>Buried Parish</th>
+                <th>Buried Plague Total</th>
+                <th>Buried Total</th>
                 <th width="15%">Location</th>
                 <th width="40%">Notes</th>
             </tr>
-        {% assign events = site.data.a-frightful-number-plague | group_by:"date_year" %}
-        {% for year in events %}
-            <tr>
-                <td colspan="7"><h3>{{ year.name }}</h3></td>
-            </tr>
+
             {% for event in year.items %}
             {% case event.parish %}
                 {% when "St. Brides" %}
@@ -139,7 +155,9 @@
                 <td {% if color != empty %}style="background: {{ color }};"{% endif %}>{{ event.date_descriptive }}</td>
                 <td {% if color != empty %}style="background: {{ color }};"{% endif %}>{{ event.parish }}</td>
                 <!-- <td {% if color != empty %}style="background: {{ color }};"{% endif %}>{{ event.date_year }}</td> -->
+                <td {% if color != empty %}style="background: {{ color }};"{% endif %}>{{ event.buried_plague }}</td>
                 <td {% if color != empty %}style="background: {{ color }};"{% endif %}>{{ event.buried_parish_total }}</td>
+                <td {% if color != empty %}style="background: {{ color }};"{% endif %}>{{ event.buried_plague_total }}</td>
                 <td {% if color != empty %}style="background: {{ color }};"{% endif %}>{{ event.buried_total }}</td>
                 <td {% if color != empty %}style="background: {{ color }};"{% endif %}>{{ event.location_descriptive }}</td>
                 <td {% if color != empty %}style="background: {{ color }};"{% endif %}>{{ event.notes }}</td>
