Disabled text-size-adjust

--- a/_source/index.html
+++ b/_source/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <style type="text/css">
+    * {
+        -webkit-text-size-adjust:none !important; -ms-text-size-adjust:none !important;
+    }
     #map {
         background: #efefef;
         margin-bottom: 20px;
