--- a/_source/index.html
+++ b/_source/index.html
@@ -82,7 +82,7 @@
             {% assign events = site.data.a-frightful-number-plague | where:"parish_id",{{parish.id}} %}
             {% for event in events %}
             popupContents += '<dt><a href="#event-{{ event.sequence }}">{{ event.date_descriptive }}</a></dt>'
-            popupContents += "<dd><b>Buried Plague: {{ event.buried_plague }}.</b> {{ event.notes }}</dd>";
+            popupContents += "<dd><b>Buried Plague: {% if event.buried_plague != null %}{{ event.buried_plague }}{% else %}0{% endif %}.</b> {{ event.notes }}</dd>";
             {% endfor %}
             parishPolygon{{ parish.id }}.bindPopup( popupContents );
         } )
