--- a/_source/index.html
+++ b/_source/index.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>A &ldquo;Frightful Number&rdquo; &ndash; Mapping Daniel Dafoe&rsquo;s A Journal of the Plague Year</title>
+    <title>A &ldquo;Frightful Number&rdquo; &ndash; Mapping Daniel Defoe&rsquo;s A Journal of the Plague Year</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-    <h1>A &ldquo;Frightful Number&rdquo; &ndash; Mapping Daniel Dafoe&rsquo;s A Journal of the Plague Year</h1>
+    <h1>A &ldquo;Frightful Number&rdquo; &ndash; Mapping Daniel Defoe&rsquo;s A Journal of the Plague Year</h1>
 
     <div id="map"></div>
 
